--- a/login/style.css
+++ b/login/style.css
@@ -47,7 +47,7 @@ body {
 }
 
 .container button {
-    background-color: #512da8;
+    background-color: rgb(0, 195, 255);
     color: #fff;
     font-size: 12px;
     padding: 10px 45px;
@@ -165,9 +165,9 @@ body {
 }
 
 .toggle {
-    background-color: #512da8;
+    background-color: rgb(0, 162, 255);
     height: 100%;
-    background: linear-gradient(to right, #5c6bc0, #512da8);
+    background: linear-gradient(to right, #00fff2, #019196);
     color: #fff;
     position: relative;
     left: -100%;
